--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Zach Lindner",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "express": "^4.16.3",
     "http": "0.0.0",
+    "mysql": "^2.15.0",
     "nodemon": "^1.17.5"
   }
 }
