--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "http": "0.0.0",
     "mysql": "^2.15.0",
+    "nodemailer": "^4.6.7",
     "nodemon": "^1.17.5"
   }
 }
