--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http": "0.0.0",
     "mysql": "^2.15.0",
     "nodemailer": "^4.6.7",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "request": "^2.87.0"
   }
 }
