--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Zach Lindner",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
     "http": "0.0.0",
     "mysql": "^2.15.0",
